k8s-jms-eureka-server3001/deploy.yml
---
kind: Service
apiVersion: v1
metadata:
  name: eureka
  labels:
    app: eureka
spec:
  ports:
    - port: 10086
      nodePort: 5555
      name: eureka
      targetPort: 10086
  type: NodePort
  selector:
    app: eureka
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: eureka
spec:
  serviceName: "eureka"
  replicas: 2
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      imagePullSecrets:
        - name: $SECRET_NAME
      containers:
        - name: eureka
          image: $IMAGE_NAME
          ports:
            - containerPort: 10086
  podManagementPolicy: "Parallel"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eureka
spec:
  rules:
    - host: eureka.medusa.com
      http:
        paths:
          - path: /
            backend:
              serviceName: eureka
              servicePort: 10086
